# ARISU

./: Cargo.toml  LICENSE  README.md
src/: clipboard.rs  counter.rs  credential.rs  gui.rs  input.rs  main.rs  screen.rs
src/screen/: display.rs  sound.rs
